# swiss-road-mobility-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  render.yaml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  live-tests.yml  publish.yml
audits/2026-06-03-re-audit/: re-audit-report.md  verification-results.json
audits/2026-06-03T115912-Z-swiss-road-mobility-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-06-03T115912-Z-swiss-road-mobility-mcp/findings/: ARCH-005-secret-hygiene.md  OPS-001-test-strategy.md  SDK-004-cors-session-id.md  SEC-004-ssrf-redirects.md  SEC-007-container-sandboxing.md  SEC-009-unauthenticated-public-endpoint.md  SEC-016-default-bind-0000.md
docs/: ARCHITECTURE.md  OPERATIONS.md  SECURITY.md
docs/superpowers/plans/: 2026-04-14-safety-and-demo.md
docs/superpowers/specs/: 2026-04-14-safety-and-demo-design.md
src/swiss_road_mobility_mcp/: __init__.py  api_infrastructure.py  client_lifecycle.py  egress.py  errors.py  ev_charging.py  geo_admin.py  logging_config.py  multimodal.py  park_rail.py  security.py  server.py  shared_mobility.py  tracing.py  traffic_counters.py  traffic_situations.py
tests/: conftest.py  test_client_lifecycle.py  test_egress.py  test_integration.py  test_observability.py  test_phase3.py  test_progress.py  test_security.py  test_server_session.py  test_tracing.py  test_unit.py
