[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "swiss-road-mobility-mcp"
version     = "0.4.0"
description = "MCP Server for Swiss road mobility — shared vehicles, EV charging, traffic alerts, Park & Rail, multimodal trip planning"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "shared-mobility", "gbfs", "ev-charging", "mobility",
    "datex2", "traffic", "park-rail", "multimodal",
    "sbb", "transport", "geocoding",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # ARCH-012: pin the MCP SDK to the 1.x major so the negotiated protocol
    # version stays stable; Dependabot proposes vetted bumps (.github/dependabot.yml).
    "mcp[cli]>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    # OBS-006: installed in dev so the tracing tests run in CI.
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-asgi>=0.41b0",
]
# OBS-006: optional distributed tracing. Install with:
#   pip install 'swiss-road-mobility-mcp[tracing]'
tracing = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-asgi>=0.41b0",
]

[project.scripts]
swiss-road-mobility-mcp = "swiss_road_mobility_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/swiss-road-mobility-mcp"
Repository = "https://github.com/malkreide/swiss-road-mobility-mcp"
Issues     = "https://github.com/malkreide/swiss-road-mobility-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_road_mobility_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers = [
    "live: tests that hit real external APIs (manual / nightly only; excluded in CI via -m 'not live')",
]

[tool.ruff]
line-length    = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E701", "E702"]
